--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,10 @@
 /* css styles */
+/* 
+Add:
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Pacifico&display=swap');
+
+h1.title {
+  font-family: "Pacifico";
+  font-size: 30px;
+}
+*/
